--- a/app/styles/components/intro.scss
+++ b/app/styles/components/intro.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 673px;
     background-size: cover;
-    background-position: center top;
+    background-position: center bottom;
 
     @media #{$mobile-width-mq} {
         height: 600px;
